<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">番茄+</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    
    <!-- 默认显示值 -->
    <string name="default_date_format">----/--/--</string>
    
    <!-- 今日待办卡片 -->
    <string name="todays_todo_start_date">开始时间: %s</string>
    <string name="todays_todo_end_date">截止时间: %s</string>
    <string name="todays_todo_remark">备注: </string>
    
    <!-- 今日待办操作 -->
    <string name="todays_todo_outter_interrupt">外部中断</string>
    <string name="todays_todo_inner_interrupt">内部中断</string>
    <string name="todays_todo_start_tomato_timer">启动番茄钟</string>
    <string name="todays_todo_giveup_tomato_timer">放弃番茄钟</string>
    <string name="todays_todo_giveup_tomato_timer_notice">番茄钟已废弃</string>
    <string name="todays_todo_timer_remain_message" formatted="false">专注 %s: %s 剩余</string>
    
    <!-- 提示语 -->
    <string name="please_start_timer">启动一个番茄钟才能标记中断哦~</string>
    <string name="please_enter_subject">哎呀，主题忘了填了啦！</string>
    <string name="please_add_new_todos">好像都完成了哦！休息一下？或添加新的待办事项？</string>
    <string name="default_error_message">好像有什么不对劲？难道是出错啦？！</string>
    <string name="default_error_face">好像有什么不对劲？难道是出错啦？！</string>
    
    <!-- 引导界面 -->
    <string name="guide_main_text">专注</string>
    <string name="guide_sub_text">相信当下的力量</string>
    
    <!-- 添加待办页面 -->
    <string name="add_title">添加待办事项</string>
    <string name="add_subject">一句话说说你想做什么</string>
    <string name="add_unplan">*计划外事项</string>
    <string name="add_remark">一句话说不完？那就再啰嗦几句呗！</string>
    <string name="add_sumbit">添加待办</string>
    <string name="add_cancel">取消添加</string>
    
    <!-- PK选出今日待办 -->
    <string name="choose_add_title">添加到今日待办列表</string>
    <string name="choose_add_message">今天要花多少个番茄钟在『%s』上？</string>
    <string name="choose_add_hint">建议最多不超过7个~</string>
    <string name="choose_add_message">今天要花多少个番茄钟在『%s』上？</string>
    <string name="choose_add_to_todays_todo">添加到今日待办</string>
    <string name="choose_add_restart">重新开始新的一轮</string>
    <string name="choose_guide_text">淘汰赛，让不重要的让位。</string>
    
</resources>