<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:minWidth="280dp"
    android:orientation="vertical"
    android:padding="5dp" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/FLAT_MIDNIGHT_BLUE"
        android:text="@string/choose_add_title"
        android:textSize="22sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/chooseMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/FLAT_MIDNIGHT_BLUE"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/chooseEstimate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/choose_add_hint"
            android:inputType="numberDecimal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/chooseAdd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/choose_add_to_todays_todo" />

        <Button
            android:id="@+id/chooseRestart"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/choose_add_restart" />
    </LinearLayout>

</LinearLayout>