<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <android.support.v4.view.ViewPager
            android:id="@+id/viewpager"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/todays_todo_timer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/confirm"
            android:paddingTop="14dp"
            android:paddingBottom="14dp"
            android:gravity="center_horizontal"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:visibility="gone" />

        <com.roslab.app.tomatogtd.view.UnderlinePageIndicator
            android:id="@+id/indicator"
            android:layout_width="fill_parent"
            android:layout_height="4dp"
            android:layout_gravity="bottom" />
    </FrameLayout>

    <TextView
        android:id="@+id/todays_todo_shield"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0"
        android:background="@color/white"
        android:clickable="true"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <!-- operation card top area -->

        <LinearLayout
            android:id="@+id/todays_todo_top_area"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="vertical" >
        </LinearLayout>

        <!-- operation card bottom area -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:paddingLeft="10dp" >

            <!-- tomato to use -->

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical|left"
                android:layout_weight="1"
                android:gravity="center_vertical|left"
                android:orientation="vertical" >
            </LinearLayout>
            <!-- operation -->

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical|right"
                android:layout_marginBottom="4dp"
                android:background="@color/white"
                android:gravity="bottom|right"
                android:orientation="horizontal"
                android:paddingRight="15dp" >

                <TextView
                    android:id="@+id/todays_todo_start_tomato_timer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:clickable="true"
                    android:drawableTop="@drawable/play"
                    android:text="@string/todays_todo_start_tomato_timer"
                    android:textColor="@color/gray"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/todays_todo_giveup_tomato_timer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:clickable="true"
                    android:drawableTop="@drawable/trash"
                    android:text="@string/todays_todo_giveup_tomato_timer"
                    android:textColor="@color/gray"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/todays_todo_inner_interrupt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:clickable="true"
                    android:drawableTop="@drawable/quote"
                    android:text="@string/todays_todo_inner_interrupt"
                    android:textColor="@color/gray"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/todays_todo_outter_interrupt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:clickable="true"
                    android:drawableTop="@drawable/minus"
                    android:text="@string/todays_todo_outter_interrupt"
                    android:textColor="@color/gray"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</FrameLayout>